<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/podcastTitle"
        android:text="@string/placeholderTitle"
        android:textSize="45dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/coverArt"
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="200dp" />
    <Spinner
        android:id="@+id/episodeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <TextView
        android:id="@+id/podcastDescription"
        android:text="@string/placeholderDescription"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/playButton"
            android:text="@string/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
        <Button
            android:id="@+id/pauseButton"
            android:text="@string/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
        <Button
            android:id="@+id/stopButton"
            android:text="@string/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
        <Button
            android:id="@+id/removePodcast"
            android:text="@string/removePodcast"
            android:layout_marginLeft="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>