<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/episodeTitle"
        android:text="@string/hello_world"
        android:layout_weight="0.1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/episodePlayButton"
        android:text="@string/playButton"
        android:textSize="10sp"
        android:layout_width="50dp"
        android:layout_height="30dp" />

    <RelativeLayout
        android:id="@+id/episodeLoading"
        android:visibility="gone"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
    <Button
        android:id="@+id/episodePauseButton"
        android:text="@string/pauseButton"
        android:textSize="9sp"
        android:visibility="gone"
        android:layout_width="50dp"
        android:layout_height="30dp" />
</LinearLayout>